refactor: clear the mechanical single-site analyzer findings
Math.clamp for the worker-thread bound, \d for the leading digit class, an
explicit Boolean.TRUE.equals on the boxed pipeline value, Predicate instead of
Function<_, Boolean> for the connection-state callback, and one indexOf(']')
computed once and compared >= 0 (the bracket at index 0 makes position 0
unreachable, so the comparison change is inert).

Three findings are answered with documented suppressions instead of code:
S1144's "unused" ByteBuf constructor is the one every PacketFactory method
reference binds to (MCProtocolLib factories take a ByteBuf); S2234 misreads the
delegation that moves `source` from the middle of the public signature to a
trailing consumer; S6916's suggested `when` guard is illegal on enum-constant
case labels (JLS 14.11.1) and does not compile.